tex: Edit DDP subsection

--- a/tex/RSS2017_PressPull.tex
+++ b/tex/RSS2017_PressPull.tex
@@ -9,6 +9,7 @@
 % \usepackage[standard]{ntheorem}
 \usepackage{amsthm}
 \usepackage{mathtools}
+\usepackage{bm}
 \usepackage{graphicx}
 % \usepackage{caption}
 % \usepackage{figure}
@@ -57,6 +58,8 @@ cross/.default={2pt}}
 \DeclareMathOperator*{\argmin}{arg\,min}
 \DeclareMathOperator{\intr}{int}
 \DeclareMathOperator{\dom}{dom}
+\DeclareMathOperator{\rot}{\text{rot}}
+
 
 \newcommand{\BB}[1]{{\color{red} {Byron: {#1}}}}
 
@@ -938,16 +941,14 @@ $d$ is the number of significant digits returned and $n$ is the number
 of points in the discretization of $R$.
 
 \subsection{Differential Dynamic Programming}
-
-\begin{inparaenum}
-\item contact point(s)
-\item initialization
-\item discretized dynamics
-\item cost functions
-\item Yifan's DDP code
-\item Which ddp algorithm was used
-\end{inparaenum}
-
+% \begin{inparaenum}
+% \item contact point(s)
+% \item initialization
+% \item discretized dynamics
+% \item cost functions
+% \item Yifan's DDP code
+% \item Which ddp algorithm was used
+% \end{inparaenum}
 We use control-limited Differential Dynamic Programming (DDP)
 \cite{tassa2014control} to plan trajectories for robotic pulling.  Our
 implementation uses the following first order approximation of the
@@ -962,21 +963,46 @@ discretized dynamics
 In this system, the controls at index $i$ are the distance $d_i$ and
 heading $\phi_i$. The functions $\hat{\alpha}$ and $\hat{\beta}$ are
 Fourier series approximations of the upper and lower bounds $\alpha$
-and $\beta$. The state variable $h_i$ measures the cumulative distance
+and $\beta$. The variable $h_i$ measures the cumulative distance
 pulled.
 
-\begin{proposition}
-  $\mathcal{u}\mathcal{L} \times \mathcal{U}$ $\Omega \Phi$ $u \ell U L \alpha \beta A B $
+Let $\mathbf{x}_i = [x_i,y_i,u_i,l_i]^T$ and
+$\mathbf{u}_i = [d_i,\phi_i]^T$, with $i\in[1,N]$. In our DDP planner,
+we set the running cost $\mathcal{L}(\mathbf{x}_i,\mathbf{u}_i)$ to
+zero. We set the final cost to be
+\begin{equation}
+\mathcal{L}_F(\mathbf{x}_N,h_N) = \mathbf{k}^T\mathcal{L}_{\bm{\delta}}(\mathbf{x}_N-\mathbf{x}_F) + \lambda h_N^2,
+\end{equation}
+where $\mathcal{L}_{\bm{\delta}}$ is the vectorized version of the
+Pseudo-Huber loss function \footnote{This function approximates an
+  $\ell_1$ norm for $a > \delta$.}
+\begin{equation}
+\mathcal{L}_{\delta}(a) = \sqrt{a^2+\delta^2}-\delta,
+\end{equation}
+$\mathbf{x}_F$ is the goal configuration, and $\mathbf{k}$ and
+$\lambda$ are penalty coefficients. 
 
-\begin{align*}
-  \dot x &= x \\
-  \dot y &= y \\
-  \dot\ell &= \alpha() \\
-  \dot u &= \beta() 
-\end{align*}
-  $\dot{\theta}_u = u()$
-  $\dot{\theta}_\ell = \ell()$
-\end{proposition}
+We initialize our optimizer using paths generated from Dubin's curves
+\cite{dubins1957curves} because pulling with sticking contact shares
+similar dynamics with the simple car \cite{lavalle1999planning}.
+Dubin's curves are time-optimal paths for simple cars. The curves
+consist of constant curvature turns and straight line segments. To
+apply these curves to our system, we need two pieces of information:
+the minimum turning radius and the effective rear axle center. 
+
+Given a heading $\omega \in (-\pi/2,\pi/2) $ and resultant angular velocity
+$\alpha(\omega)$ in the frame of the contact point, the minimum
+turning radius is equivalent to the distance from the center of
+rotation to the line between the contact point and the center of
+pressure $\mathbf{p}_0 = [x_0,y_0]^T$, that is
+\begin{equation}
+  r_{\text{min}} = \frac{\sign y_0}{\alpha(\omega)},
+\end{equation}
+and the effective rear axle center is the projection of the rotation center onto that line, i.e.
+\begin{equation}
+  \mathbf{c}_{\text{rear}} = -\frac{x_0}{\alpha(\omega)}\cdot\frac{\mathbf{p}_0}{\lVert \mathbf{p}_0 \rVert^2}.
+\end{equation}
+% From these, we can compute Dubin's curves for our initialization.
 
 \section{Hardware}
 
