--- a/tex/references.bib
+++ b/tex/references.bib
@@ -99,3 +99,21 @@
   year={2014},
   organization={IEEE}
 }
+@article{dubins1957curves,
+  title={On curves of minimal length with a constraint on average curvature, and with prescribed initial and terminal positions and tangents},
+  author={Dubins, Lester E},
+  journal={American Journal of mathematics},
+  volume={79},
+  number={3},
+  pages={497--516},
+  year={1957},
+  publisher={JSTOR}
+}
+@article{lavalle1999planning,
+  title={Planning algorithms},
+  author={LaValle, Steven M},
+  journal={University of Illinois},
+  volume={2004},
+  year={1999},
+  publisher={Citeseer}
+}
