--- a/tex/references.bib
+++ b/tex/references.bib
@@ -117,3 +117,18 @@
   year={1999},
   publisher={Citeseer}
 }
+@article{YuBFR16,
+  author    = {Kuan{-}Ting Yu and
+               Maria Bauz{\'{a}} and
+               Nima Fazeli and
+               Alberto Rodriguez},
+  title     = {More than a Million Ways to Be Pushed: {A} High-Fidelity Experimental
+               Data Set of Planar Pushing},
+  journal   = {CoRR},
+  volume    = {abs/1604.04038},
+  year      = {2016},
+  url       = {http://arxiv.org/abs/1604.04038},
+  timestamp = {Mon, 02 May 2016 18:22:52 +0200},
+  biburl    = {http://dblp.uni-trier.de/rec/bib/journals/corr/YuBFR16},
+  bibsource = {dblp computer science bibliography, http://dblp.org}
+}
