--- a/tex/references.bib
+++ b/tex/references.bib
@@ -132,3 +132,31 @@
   biburl    = {http://dblp.uni-trier.de/rec/bib/journals/corr/YuBFR16},
   bibsource = {dblp computer science bibliography, http://dblp.org}
 }
+@inproceedings{zhou2016convex,
+  title={A convex polynomial force-motion model for planar sliding: Identification and application},
+  author={Zhou, Jiaji and Paolini, Robert and Bagnell, J Andrew and Mason, Matthew T},
+  booktitle={Robotics and Automation (ICRA), 2016 IEEE International Conference on},
+  pages={372--377},
+  year={2016},
+  organization={IEEE}
+}
+@article{howe1996practical,
+  title={Practical force-motion models for sliding manipulation},
+  author={Howe, Robert D and Cutkosky, Mark R},
+  journal={The International Journal of Robotics Research},
+  volume={15},
+  number={6},
+  pages={557--572},
+  year={1996},
+  publisher={Sage Publications Sage CA: Thousand Oaks, CA}
+}
+@article{goyal1991planar,
+  title={Planar sliding with dry friction part 1. limit surface and moment function},
+  author={Goyal, Suresh and Ruina, Andy and Papadopoulos, Jim},
+  journal={Wear},
+  volume={143},
+  number={2},
+  pages={307--330},
+  year={1991},
+  publisher={Elsevier}
+}
